--- a/js-counter/styles.css
+++ b/js-counter/styles.css
@@ -22,6 +22,10 @@ body {
     font-size: 2rem;
 }
 
+#button-wrapper {
+    margin-bottom: 10px;
+}
+
 input[type="button"] {
     border: 1px solid #062e03;
     background-color: #cb0162;
@@ -35,4 +39,9 @@ input[type="button"] {
 
 input[type="button"]:hover {
     box-shadow: 0px 0px 5px #062e03;
+}
+
+input[type="number"] {
+    font-size: 2em;
+    width: 30%;
 }
